<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#217c03"
    android:orientation="vertical"
    tools:context=".Activity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/teal_700"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/main" />

        <Button
            android:id="@+id/exit_a2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/exit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="524dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/dealer"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/points"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dealer_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:freezesText="true"
                android:textAlignment="textStart"
                android:textSize="20sp" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/dealer_table"
            android:layout_width="match_parent"
            android:layout_height="239dp">

            <TableRow
                android:id="@+id/dealer_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/dealer_card1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10px"
                    android:layout_marginStart="10px"
                    android:layout_marginLeft="10px"
                    android:layout_marginTop="10px"
                    android:layout_marginEnd="10px"
                    android:layout_marginBottom="10px"
                    app:srcCompat="@drawable/card_back" />
            </TableRow>

            <TableRow
                android:id="@+id/dealer_row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/points"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_points"
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:freezesText="true"
                android:textAlignment="textStart"
                android:textSize="20sp" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/userTable"
            android:layout_width="match_parent"
            android:layout_height="233dp">

            <TableRow
                android:id="@+id/u_row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center" />

        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            android:text="@string/hit" />

        <Button
            android:id="@+id/stay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="32dp"
            android:text="@string/stay" />
    </LinearLayout>

</LinearLayout>